# JiraIFGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: errors.py
framework/: CMakeLists.txt  endpoint.cpp  endpoint.h
framework/network/: CMakeLists.txt  reply.cpp  reply.h  session.cpp  session.h
framework/tests/: CMakeLists.txt
framework/tests/test_reply/: CMakeLists.txt  test_reply.cpp
framework/tests/test_response_status/: CMakeLists.txt  test_response_status.cpp
framework/tests/test_session/: CMakeLists.txt  test_session.cpp  test_session.h
framework/types/: CMakeLists.txt  definitions.h  responsestatus.cpp  responsestatus.h
generator/: __main__.py  generator.py
models/: endpoint.py  jirawadl.py  resourcebundle.py
parser/: endpoint.py  jirawadl.py  resourcebundle.py
tests/: jira-rest-plugin_6.4.7.wadl  jira-rest-plugin_7.3.0.wadl  test_parser.py  test_resourcebundle.py
wadl/: jira-agile-rest-plugin_7.3.1_unofficial.wadl  jira-rest-plugin_8.8.1.wadl  jira-rest-plugin_invalid.wadl
